--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kokoi",
   "version": "0.1.0",
-  "description": "Markup file previewer/converter",
+  "description": "Universal markup file previewer/converter",
   "bin": {
     "kokoi": "./bin/kokoi.js"
   },
@@ -22,6 +22,7 @@
     "textile",
     "restructuredtext",
     "mathjax",
+    "pandoc",
     "html"
   ],
   "author": "Alessandro Di Martino <aledimax@gmail.com>",
