--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kokoi",
-  "version": "0.1.1",
-  "description": "Universal markup file previewer/converter",
+  "version": "0.1.2",
+  "description": "Universal markup file watcher/previewer",
   "bin": {
     "kokoi": "./bin/kokoi.js"
   },
