--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kokoi",
-  "version": "0.1.2",
-  "description": "Universal markup file watcher/previewer",
+  "version": "0.1.3",
+  "description": "Universal markup file watcher, previewer and converter.",
   "bin": {
     "kokoi": "./bin/kokoi.js"
   },
